@@ -105,6 +105,7 @@
  * #1111 (Function::draw() does not take the scale parameter properly into account)
  * #1112 (Several bugs in Multinomial)
  * #1119 (The parameter description is not taken into account in CalibrationResult)
+ * #1129 (Segmentation fault with RandomMixture)
 
 == 1.12 release (2018-11-08) == #release-1.12
 
